--- a/Owin.Web/packages.config
+++ b/Owin.Web/packages.config
@@ -5,6 +5,7 @@
   <package id="Microsoft.AspNet.WebApi" version="5.0.0-beta2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.0.0-beta2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.0.0-beta2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Owin" version="5.0.0-beta2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.0.0-beta2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.0.0-beta2" targetFramework="net45" />
   <package id="Microsoft.Owin" version="1.1.0-beta2" targetFramework="net45" />
@@ -14,4 +15,6 @@
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Owin.Extensions" version="0.8.5" targetFramework="net45" />
   <package id="Owin.Types" version="0.8.5" targetFramework="net45" />
+  <package id="protobuf-net" version="2.0.0.640" targetFramework="net45" />
+  <package id="WebApiContrib.Formatting.ProtoBuf" version="0.9.5.0" targetFramework="net45" />
 </packages>
