--- a/Owin.Web/packages.config
+++ b/Owin.Web/packages.config
@@ -1,20 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.AspNet.Mvc" version="5.0.0-beta2" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Razor" version="3.0.0-beta2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi" version="5.0.0-beta2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.0.0-beta2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.0.0-beta2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.0.0-beta2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.0.0-beta2" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebPages" version="3.0.0-beta2" targetFramework="net45" />
   <package id="Microsoft.Owin" version="1.1.0-beta2" targetFramework="net45" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="1.1.0-beta2" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="Nancy" version="0.18.0" targetFramework="net45" />
+  <package id="Nancy.Owin" version="0.18.0" targetFramework="net45" />
+  <package id="Nancy.Viewengines.Razor" version="0.18.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Owin.Extensions" version="0.8.5" targetFramework="net45" />
   <package id="Owin.Types" version="0.8.5" targetFramework="net45" />
   <package id="protobuf-net" version="2.0.0.640" targetFramework="net45" />
-  <package id="WebApiContrib.Formatting.ProtoBuf" version="0.9.5.0" targetFramework="net45" />
+  <package id="ServiceStack.Text" version="3.9.56" targetFramework="net45" />
+  <package id="System.Web.Razor.Unofficial" version="2.0.2" targetFramework="net45" />
 </packages>
