--- a/Owin.Web/packages.config
+++ b/Owin.Web/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EntityFramework" version="6.0.1" targetFramework="net45" />
   <package id="jQuery" version="2.0.3" targetFramework="net45" />
+  <package id="Knockout.Mapping" version="2.4.0" targetFramework="net45" />
+  <package id="knockoutjs" version="2.0.0.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi" version="5.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.0.0" targetFramework="net45" />
